<resources>
    <string name="app_name">PrzUsosLite</string>
    <string name="logo">logo</string>
    <string name="beginButton">Rozpocznij</string>
    <string name="hello">Witaj</string>
    <string name="name">Imie Nazwisko</string>
    <string name="studentStatus">Student</string>
    <string name="schedule">Plan zajęć</string>
    <string name="grades">Oceny</string>
    <string name="mondaysym">PN</string>
    <string name="tuesdaysym">WT</string>
    <string name="wednesdaysym">ŚR</string>
    <string name="thursdaysym">CZ</string>
    <string name="fridaysym">PT</string>
    <string name="saturdaysym">SB</string>
    <string name="sundaysym">N</string>
    <string name="diffdate">Zmień date</string>
    <string name="hoursLinker">do</string>
    <string name="semester">Semestr</string>
</resources>